# MasselGUARD

./: .gitignore  App.xaml  App.xaml.cs  BUILD.bat  BindingProxy.cs  CLAUDE.md  Lang.cs  MainWindow.xaml  MainWindow.xaml.cs  MarkdownToFlowDocument.cs  MasselGUARD.csproj  PixelGridLengthConverter.cs  Program.cs  README.md  ThemeManager.cs  TunnelDll.cs  UiHelpers.cs  UpdateChecker.cs  install-dotnet.bat  version.json
Cli/: CliOutput.cs  CliRunner.cs  WireGuardConf.cs
MasselGUARDAgent/: AgentHost.cs  MasselGUARDAgent.csproj  Orchestrator.cs  Program.cs  app.manifest
MasselGUARDcli/: MasselGUARDcli.csproj  Program.cs  app-cli.manifest
Models/: AppConfig.cs  ConnectionHistoryEntry.cs  NetworkLockMode.cs  NetworkLockPolicy.cs  ProfileSource.cs  SplitTunnelModels.cs  StoredTunnel.cs  TunnelRule.cs  WifiHistoryEntry.cs  WireGuardProfile.cs
Services/: ConfigService.cs  FirewallEnforcer.cs  HistoryService.cs  INetworkLockEnforcer.cs  KillSwitchService.cs  LogService.cs  NetworkLockStateStore.cs  ScriptService.cs  TunnelService.cs  TunnelValidationService.cs
ViewModels/: HistoryEntryViewModel.cs  MainViewModel.cs  SettingsViewModel.cs  TunnelEntryViewModel.cs  WizardViewModel.cs
Views/: ImportTunnelDialog.xaml.cs  RuleDialog.xaml  RuleDialog.xaml.cs  (+10 more)
masselguard-ui/src-tauri/: Cargo.toml  tauri.conf.json
masselguard-ui/src-tauri/capabilities/: default.json
masselguard-ui/src-tauri/src/: lib.rs  main.rs
masselguard-ui/src-tauri/src/agent/: mod.rs
masselguard-ui/src-tauri/src/events/: bridge.rs  envelope.rs  health.rs  manager.rs  mod.rs  subscriber.rs
(+169 files in other folders)
